cmake_minimum_required(VERSION 2.8.3)
project(sweetie_bot_hardware_herkulex_msgs_rtt)

find_package(catkin REQUIRED COMPONENTS rtt_roscomm)

ros_generate_rtt_typekit(sweetie_bot_hardware_herkulex_msgs)
ros_generate_rtt_service_proxies(sweetie_bot_hardware_herkulex_msgs_rtt)

orocos_generate_package(
  DEPENDS sweetie_bot_hardware_herkulex_msgs
  DEPENDS_TARGETS rtt_roscomm  rtt_std_msgs
)
